src/test/ui/issues/issue-27815.stderr
error[E0574]: expected struct, variant or union type, found module `A`
  --> $DIR/issue-27815.rs:4:13
   |
LL |     let u = A { x: 1 };
   |             ^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found builtin type `u32`
  --> $DIR/issue-27815.rs:5:13
   |
LL |     let v = u32 { x: 1 };
   |             ^^^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found module `A`
  --> $DIR/issue-27815.rs:7:9
   |
LL |         A { x: 1 } => {}
   |         ^ not a struct, variant or union type

error[E0574]: expected struct, variant or union type, found builtin type `u32`
  --> $DIR/issue-27815.rs:9:9
   |
LL |         u32 { x: 1 } => {}
   |         ^^^ not a struct, variant or union type

error: aborting due to 4 previous errors

